[package]
name = "aoc2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1"
path = "src/day1.rs"

[[bin]]
name = "2"
path = "src/day2.rs"

[[bin]]
name = "3"
path = "src/day3.rs"

[[bin]]
name = "4"
path = "src/day4.rs"

[[bin]]
name = "5"
path = "src/day5.rs"

[[bin]]
name = "6"
path = "src/day6.rs"

[[bin]]
name = "7"
path = "src/day7.rs"

[[bin]]
name = "8"
path = "src/day8.rs"

[[bin]]
name = "9"
path = "src/day9.rs"

[[bin]]
name = "10"
path = "src/day10.rs"

[[bin]]
name = "11"
path = "src/day11.rs"